aula 2 - front end começo

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -11,10 +11,12 @@
             <p>Valor Total</p>
             R$ 200,00    
         </div>
+
         <div class="div-inline-block">
             <p>Receitas</p>
             R$200,00
         </div>
+        
         <div class="div-inline-block despesas">
             <p>Despesas</p>
             R$200,00    
@@ -22,12 +24,15 @@
     </div>
 
     <div class="pesquisa">
-        <div class="div-inline-block-pesquisa">
-            <p>Valor Total</p>
+        <div class="div-inline-block-pesquisa input-pesquisa">
+            <input type="text" name="pesquisa" id="pesquisa" placeholder="Digite algo">
         </div>
-        <div class="div-inline-block-pesquisa">
-            <p>Valor Total</p>
+        <div class="div-inline-block-pesquisa btn-adicionar">
+            <a href="/adicionar" class="btn btn-primary">Adicionar</a>
         </div>
     </div>
+    
+
+    
 
 </div>
